Fixes misalignes icon on dropdown component

--- a/src/frontend/src/components/dropdown/dropdown.less
+++ b/src/frontend/src/components/dropdown/dropdown.less
@@ -9,6 +9,7 @@
   padding: 0 30px @m-stack 0;
   position: relative;
   font-size: @l-base-font-size;
+  line-height: @l-base-font-size;
 
   select {
     color: @s2-black;
